--- a/config/params.ini
+++ b/config/params.ini
@@ -1,7 +1,7 @@
 ; There is detailed documentation for each parameter in the README.md
 [general]
 difficulty=hell
-name=Botty
+name=Blasty
 randomize_runs=0
 saved_games_folder=
 
@@ -13,8 +13,8 @@ discord_status_count=20
 message_api_type=discord
 
 ; breaks
-break_length_m=0
-max_runtime_before_break_m=0
+break_length_m=5
+max_runtime_before_break_m=40
 
 ; timers / fail handling
 d2r_path=C:\Program Files (x86)\Diablo II Resurrected
@@ -37,14 +37,14 @@ pickit_screenshots=0
 ; run_nihlathak
 ; run_arcane
 ; run_diablo
-order=run_pindle, run_eldritch_shenk
+order=run_pindle
 
 [char]
 ; ==========================
 ; ==== Mandatory Fields ====
 ; ==========================
 ; These configs have to be alligned with your d2r settings and char build
-type=light_sorc
+type=fohdin
 belt_rows=4
 casting_frames=10
 cta_available=0
@@ -69,7 +69,7 @@ show_items=alt
 stand_still=capslock
 ; teleport: leave empty if you can't use
 teleport=
-town_portal=f9
+town_portal=f5
 ; call to arms settings:
 weapon_switch=x
 battle_orders=f7
@@ -85,7 +85,7 @@ use_merc=1
 atk_len_arc=2.5
 atk_len_eldritch=3.0
 atk_len_nihlathak=4.0
-atk_len_pindle=3.0
+atk_len_pindle=6.0
 atk_len_shenk=4.0
 atk_len_trav=3.0
 
@@ -121,11 +121,12 @@ enable_no_pickup=1
 fill_shared_stash_first=0
 ; to gamble, add any/all of the following: circlet, ring, coronet, talon, amulet
 gamble_items=
+id_items=1
 open_chests=1
 pre_buff_every_run=1
-runs_per_repair=0
+runs_per_repair=10
 runs_per_stash=4
-sell_junk=0
+sell_junk=1
 
 [transmute]
 ;stash tabs by priority where to put transmuted gems
@@ -141,7 +142,7 @@ transmute_every_x_game=20
 ; ===========================
 [sorceress]
 energy_shield=
-frozen_armor=
+frozen_armor=f4
 static_field=
 telekinesis=
 thunder_storm=
@@ -156,9 +157,9 @@ frozen_orb=
 
 [blizz_sorc]
 ; blizzard must be right skill, hotkey required
-blizzard=
+blizzard=f1
 ; ice_blast must be left skill (hotkey optional as it shouldnt change)
-ice_blast=
+ice_blast=f2
 
 [nova_sorc]
 ; nova must be right skill, hotkey required
@@ -176,17 +177,17 @@ hydra=
 ; =========================
 [paladin]
 cleansing=
-holy_shield=
-redemption=
-vigor=
+holy_shield=f3
+redemption=f7
+vigor=f6
 
 [fohdin]
 ; foh must be left skill, hotkey required
 blessed_hammer=
 concentration=
-conviction=
-foh=
-holy_bolt=
+conviction=f4
+foh=f1
+holy_bolt=f2
 
 [hammerdin]
 blessed_hammer=
